--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,15 +1,11 @@
-<footer>
-    <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <img class="imgFooter" src="https://i.ibb.co/NYzCjqf/ieee-white.png" alt="Logo IEEE" width="190vmin">
-          </div>
-          <div class="imgFooter" class="col-sm">
-            <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" alt="Logo IEEE ITBA" width="100vmin">
-          </div>
-          <div class="imgFooter" class="col-sm">
-            <img src="https://i.ibb.co/gvxWrd8/itba-white.png" alt="Logo ITBA" width="170vmin">
-          </div>
-        </div>
-      </div>
-</footer>
+<div class="row" fxLayoutAlign="center center">
+  <div class="margin-logo col-sm">
+    <img src="https://i.ibb.co/xhpWHKs/IEEE-White-Space.png" alt="Logo IEEE" width="190vmin">
+  </div>
+  <div class="margin-logo col-sm">
+    <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" alt="Logo IEEE ITBA" width="100vmin">
+  </div>
+  <div class="margin-logo col-sm">
+    <img src="https://i.ibb.co/gvxWrd8/itba-white.png" alt="Logo ITBA" width="170vmin">
+  </div>
+</div>
