--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -52,8 +52,39 @@
     </div>
   </div>-->
 
-  <!-- Educacion, Competencia, Contacto -->
+
+  <!-- IEEENews -->
   <div *ngIf="true">
+    <div class="bottomLine" fxLayoutAlign="center center" fxLayout="column">
+      <div class="card-group maxwidth400" >
+
+        <mdb-card>
+          <mdb-card-img src="assets/image/IEEENews3.png">
+          </mdb-card-img>
+          <mdb-card-body>
+
+            <mdb-card-title>
+              <h4>{{ 'HOME.IEEENEWS.TITLE' | translate }}</h4>
+            </mdb-card-title>
+
+            <mdb-card-text>{{ 'HOME.IEEENEWS.CONTENT' | translate }}</mdb-card-text>
+                
+            <a class="link-text" [routerLink]="['/noticias']">
+              <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+                <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+              </h5>
+            </a>
+          </mdb-card-body>
+
+        </mdb-card>
+
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Educacion, Competencia, Contacto -->
+  <div *ngIf="false">
     <div class="bottomLine">
       <div class="card-group">
 
@@ -280,9 +311,9 @@
       </div>
     </div>
   </div>
-
+  
+  <app-footer></app-footer>
 </body>
 
-<app-footer></app-footer>
 
 </html>
