--- a/src/app/noticias/noticias.component.html
+++ b/src/app/noticias/noticias.component.html
@@ -13,15 +13,28 @@
 
 <body>
     <div class="body" fxLayoutAlign="center center" fxLayout="column">
+        <!--<div *ngIf="showLoadingSpinner">
+            <app-loading-spinner>
+
+            </app-loading-spinner>
+        </div>-->
+
         <div class="spacenav">
         </div>
         <div class="spacenav">
         </div>
-        <div class="topbottomLine" id="home" fxLayoutAlign="center center" fxLayout="column">
+        <div *ngIf="showLoadingSpinner">
+            <app-loading-spinner>
+
+            </app-loading-spinner>
+        </div>
+        <div *ngIf="!showLoadingSpinner" id="home" fxLayoutAlign="center center" fxLayout="column">
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
-                        <h1 id="eventos" class="white-title">Noticias</h1>
+                        <h1 id="eventos" class="white-title">
+                            <img height="300px" src="assets/image/IEEENews2.png">
+                        </h1>
                     </div>
                 </div>
             </div>
@@ -29,20 +42,12 @@
         <div class="spacenav">
         </div>
 
-        <div *ngIf="showLoadingSpinner">
-            <app-loading-spinner>
-
-            </app-loading-spinner>
-        </div>
         <div class="row width1000" fxLayoutAlign="center center">
-
-
             <div *ngFor="let noticia of newsData">
-
                 <div class="col-sm margin-top">
                     <a href="noticias/{{noticia.reference}}">
                         <mat-card class="example-card">
-                            <mat-card-header>
+                            <mat-card-header class="height500" fxLayoutAlign="center center">
                                 <mat-card-title>{{noticia.title}}</mat-card-title>
                                 <mat-card-subtitle>Por {{noticia.author}}</mat-card-subtitle>
                             </mat-card-header>
@@ -57,7 +62,5 @@
         </div>
         <app-footer></app-footer>
     </div>
-
-</body>
-
+    </body>
 </html>
