small fix in language

--- a/src/app/noticias/noticias.component.html
+++ b/src/app/noticias/noticias.component.html
@@ -49,7 +49,7 @@
                         <mat-card class="example-card">
                             <mat-card-header class="height500" fxLayoutAlign="center center">
                                 <mat-card-title>{{noticia.title}}</mat-card-title>
-                                <mat-card-subtitle>Por {{noticia.author}}</mat-card-subtitle>
+                                <mat-card-subtitle>{{noticia.author}}</mat-card-subtitle>
                             </mat-card-header>
                             <img height="200px" mat-card-image src="{{noticia.imageUrl}}" alt="Foto de Noticia">
                         </mat-card>
