added banners to home page

--- a/src/app/mainpage/mainpage.component.css
+++ b/src/app/mainpage/mainpage.component.css
@@ -5,9 +5,9 @@ html {
 
 body {
     padding: 10%;
-    background: rgb(10,27,103);
-    background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
-    background-size: cover;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
+      background-size: cover;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
@@ -102,6 +102,36 @@ h2{
 .maxwidth400{
     max-width: 400px;
 }
+
+.max-width{
+     width: 100%;
+    height: 26em;
+}
+
+/* Bottom left text */
+.main-title {
+    position: absolute;
+    bottom: 2em;
+    left: 2em;
+    font-size: 3em;
+    font-family: 'Roboto'
+  }
+
+  .subtitle {
+    position: absolute;
+    bottom: 1em;
+    left: 3em;
+    font-size: 2em;
+    font-family: 'Roboto'
+  }
+
+.banner {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+
 /* Flex */
 
 @media (max-width: 950px) {
