--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,11 @@
 <div class="row" fxLayoutAlign="center center">
   <div class="margin-logo col-sm">
-    <img src="https://i.ibb.co/xhpWHKs/IEEE-White-Space.png" alt="Logo IEEE" width="190vmin">
+    <img src="assets/image/logos/ieee.png" alt="Logo IEEE" width="190vmin">
   </div>
   <div class="margin-logo col-sm">
-    <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" alt="Logo IEEE ITBA" width="100vmin">
+    <img src="assets/image/logos/ieee-itba.png" alt="Logo IEEE ITBA" width="100vmin">
   </div>
   <div class="margin-logo col-sm">
-    <img src="https://i.ibb.co/gvxWrd8/itba-white.png" alt="Logo ITBA" width="170vmin">
+    <img src="assets/image/logos/itba.png" alt="Logo ITBA" width="170vmin">
   </div>
 </div>
