--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Main Page</title>
+  <title>Home</title>
 </head>
 
 <header>
   <app-navbar></app-navbar>
   <div class="banner">
-    <img src="assets/image/banner6.jpg" alt="Snow" class="max-width">
+    <img src="assets/image/banner6.jpg" alt="IEEE ITBA" class="max-width">
     <div class="main-title">ITBA IEEE</div>
     <div class="subtitle">Student Branch</div>
   </div>
@@ -22,45 +22,6 @@
 
 
 <body>
-  <!--<div class="topbottomLine" id="home">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm" [fxFlex.gt-xs]="20" fxLayoutAlign="center center" fxLayout="column">
-          <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" height="100vmin" alt="Logo ITBA-IEEE">
-        </div>
-        <div class="col-sm">
-          <h2 id="logotext">ITBA<br>IEEE Student Branch</h2>
-        </div>
-        <div class="col-sm">
-          <div class="whiteRoundedBlock" id="mainTxt">{{ 'HOME.DESC' | translate }}</div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!-- Ieeextreme -->
-  <!--<div class="bottomLine">
-    <div class="card-group" fxLayoutAlign="center center">
-      <mdb-card class="maxwidth600">
-        <mdb-card-img src="https://i.ibb.co/L549XMk/flyer-ieeextreme-para-campus-v3.jpg" alt="Foto de Curso de Python"></mdb-card-img>
-        <mdb-card-body>
-
-          <mdb-card-title>
-            <h4>{{ 'HOME.IEEEXTREME.NOW.TITLE' | translate }} </h4>
-          </mdb-card-title>
-
-          <mdb-card-text>{{ 'HOME.IEEEXTREME.NOW.TEXT' | translate }} </mdb-card-text>
-
-          <a class="link-text" href='https://bit.ly/ieeextreme14'>
-            <h5 class="waves-light" mdbWavesEffect>bit.ly/ieeextreme14
-              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-            </h5>
-          </a>
-        </mdb-card-body>
-      </mdb-card>
-    </div>
-  </div>-->
-
-
   <!-- IEEENews -->
   <div *ngIf="true">
     <div class="bottomLine" fxLayoutAlign="center center" fxLayout="column">
