--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -7,7 +7,7 @@
     <title>Sponsors</title>
 </head>
 <header>
-    <app-navbar-courses></app-navbar-courses>
+    <app-navbar></app-navbar>
 </header>
 
 <body>
