--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -28,11 +28,15 @@
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/innovid_white.png" height="30vmin"
-                                alt="Logo Innovid" style="position: relative; top: 50%; transform: translateY(-50%);">
+                            <img src="./../../assets/image/sponsors/jpmorgan.png" height="70vmin" alt="Logo Innovid"
+                                style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/eiwa.png" height="60vmin" alt="Logo Eiwa"
+                            <img src="./../../assets/image/sponsors/innovid.png" height="35vmin" alt="Logo Innovid"
+                                style="position: relative; top: 50%; transform: translateY(-50%);">
+                        </div>
+                        <div class="col-sm">
+                            <img src="./../../assets/image/sponsors/eiwa.png" height="180vmin" alt="Logo Eiwa"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
 
@@ -45,15 +49,15 @@
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/innovid_white.png" height="30vmin"
-                                alt="Logo Avature" style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/eiwa.png" height="60vmin" alt="Logo Eiwa"
+                            <img src="./../../assets/image/sponsors/jpmorgan.png" height="60vmin" alt="Logo Innovid"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/flowics.png" height="30vmin" alt="Logo Flowics"
+                            <img src="./../../assets/image/sponsors/innovid.png" height="30vmin" alt="Logo Avature"
+                                style="position: relative; top: 50%; transform: translateY(-50%);">
+                        </div>
+                        <div class="col-sm">
+                            <img src="./../../assets/image/sponsors/eiwa.png" height="150vmin" alt="Logo Eiwa"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
@@ -67,13 +71,19 @@
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/pampa.png" height="50vmin" alt="Logo Pampa"
+                            <img src="./../../assets/image/sponsors/flowics.png" height="70vmin" alt="Logo Flowics"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/tgs.png" height="40vmin" alt="Logo TGS"
+                            <img src="./../../assets/image/sponsors/tgs.png" height="60vmin" alt="Logo TGS"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
+                        <div class="col-sm">
+                            <img src="./../../assets/image/sponsors/pampa.png" height="50vmin" alt="Logo Pampa"
+                                style="position: relative; top: 50%; transform: translateY(-50%);">
+                        </div>
+                    </div>
+                    <div class="row mt-4">
                         <div class="col-sm">
                             <img src="./../../assets/image/sponsors/unify.png" height="30vmin" alt="Logo Unify"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
