added team individual page

--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -36,7 +36,8 @@
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
                     <!--<a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb#scrollTo=4FLV1yxDh9Rh">-->{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb#scrollTo=4FLV1yxDh9Rh">-->{{
+                    'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                     1
                     <!--</a>-->
                 </mat-card-title>
@@ -53,7 +54,8 @@
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
                     <!--<a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">-->{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">-->{{
+                    'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                     2
                     <!--</a>-->
                 </mat-card-title>
@@ -70,7 +72,8 @@
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
                     <!--<a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">-->{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">-->{{
+                    'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                     3
                     <!--</a>-->
                 </mat-card-title>
@@ -87,7 +90,8 @@
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
                     <!--<a
-                       href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_4_Curso_Python.ipynb">-->{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                       href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_4_Curso_Python.ipynb">-->{{
+                    'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                     4
                     <!--</a>-->
                 </mat-card-title>
@@ -104,7 +108,8 @@
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>
                     <!--<a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Trabajo_integrador.ipynb">-->{{ 'PYTHONCOURSES.CLASSES.INTEGRADOR-TITLE' | translate }}
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Trabajo_integrador.ipynb">-->{{
+                    'PYTHONCOURSES.CLASSES.INTEGRADOR-TITLE' | translate }}
                     <!-- </a>-->
                 </mat-card-title>
                 <mat-card-subtitle></mat-card-subtitle>
