--- a/src/app/navbar-courses/navbar-courses.component.css
+++ b/src/app/navbar-courses/navbar-courses.component.css
@@ -34,8 +34,7 @@
 }
 
 #nav {
-    background: rgb(10,27,103);
-    background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
+    background: rgb(23, 46, 148);
     color: whitesmoke;
 }
 
