--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,105 +1,123 @@
-<mat-tab-group dynamicHeight>
-    <mat-tab label="2020">
-        <br>
-        <mat-accordion>
-            <!-- Photos at imgbb -->
+<!DOCTYPE html>
+<html lang="en">
 
-            <!-- CD -->
-            <mat-expansion-panel class="mat-elevation-z0">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        CD
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team</title>
+</head>
 
-                <app-team-card type="CD"></app-team-card>
+<header>
+    <app-navbar></app-navbar>
+</header>
 
-            </mat-expansion-panel>
+<body>
 
-            <!-- Mediacom -->
-            <mat-expansion-panel class="mat-elevation-z0">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Mediacom
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
+    <div class="mt-5 mr-5 ml-5">
 
-                <app-team-card type="Mediacom"></app-team-card>
-                <app-team-card type="Mediacom2"></app-team-card>
-            </mat-expansion-panel>
+        <mat-tab-group dynamicHeight>
+            <mat-tab label="2020">
+                <br>
+                <mat-accordion>
+                    <!-- Photos at imgbb -->
 
-            <!-- I+D -->
-            <mat-expansion-panel class="mat-elevation-z0">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        I+D
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
+                    <!-- CD -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                CD
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
 
-                <app-team-card type="ID"></app-team-card>
+                        <app-team-card type="CD"></app-team-card>
 
-            </mat-expansion-panel>
+                    </mat-expansion-panel>
 
-            <!-- Fundraising -->
-            <mat-expansion-panel class="mat-elevation-z0">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Fundraising
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
+                    <!-- Mediacom -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                Mediacom
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
 
-                <app-team-card type="Fundraising"></app-team-card>
+                        <app-team-card type="Mediacom"></app-team-card>
+                        <app-team-card type="Mediacom2"></app-team-card>
+                    </mat-expansion-panel>
 
-            </mat-expansion-panel>
+                    <!-- I+D -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                I+D
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
 
-            <!-- Educacion -->
-            <mat-expansion-panel class="mat-elevation-z0">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        {{ 'HOME.CARGO.EDUCATION.TITLE' | translate }}
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
+                        <app-team-card type="ID"></app-team-card>
 
-                <app-team-card type="Education"></app-team-card>
-                <app-team-card type="Education2"></app-team-card>
-            </mat-expansion-panel>
+                    </mat-expansion-panel>
+
+                    <!-- Fundraising -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                Fundraising
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <app-team-card type="Fundraising"></app-team-card>
+
+                    </mat-expansion-panel>
+
+                    <!-- Educacion -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                {{ 'HOME.CARGO.EDUCATION.TITLE' | translate }}
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <app-team-card type="Education"></app-team-card>
+                        <app-team-card type="Education2"></app-team-card>
+                    </mat-expansion-panel>
 
 
-            <br><br>
+                    <br><br>
 
 
-            <!-- WIE -->
-            <mat-expansion-panel class="mat-elevation-z0">
-                <mat-expansion-panel-header>
-                    <mat-panel-title id="colorWie">
-                        Women In Engineering
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
+                    <!-- WIE -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title id="colorWie">
+                                Women In Engineering
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
 
-                <app-team-card type="WIE"></app-team-card>
-                <app-team-card type="WIE2"></app-team-card>
-                <app-team-card type="WIE3"></app-team-card>
+                        <app-team-card type="WIE"></app-team-card>
+                        <app-team-card type="WIE2"></app-team-card>
+                        <app-team-card type="WIE3"></app-team-card>
 
-            </mat-expansion-panel>
+                    </mat-expansion-panel>
 
-            <!-- CS -->
-            <mat-expansion-panel class="mat-elevation-z0">
-                <mat-expansion-panel-header>
-                    <mat-panel-title id="colorCS">
-                        Computer Society
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
+                    <!-- CS -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title id="colorCS">
+                                Computer Society
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
 
-                <app-team-card type="CS"></app-team-card>
-                <app-team-card type="CS2"></app-team-card>
+                        <app-team-card type="CS"></app-team-card>
+                        <app-team-card type="CS2"></app-team-card>
 
-            </mat-expansion-panel>
+                    </mat-expansion-panel>
 
-        </mat-accordion>
+                </mat-accordion>
 
-    </mat-tab>
-    <!--<mat-tab label="2019" disabled>
-        <br>
-        <h5>Equipo de 2019</h5>
-    </mat-tab>-->
-</mat-tab-group>
+            </mat-tab>
+        </mat-tab-group>
+    </div>
+
+</body>
+
+</html>
