--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -23,25 +23,25 @@
                 <div class="col-lg-12">
                     <form class="contact" [formGroup]="form" method="post" (ngSubmit)="onSubmit()">
                         <mat-form-field>
-                          <mat-label>Name</mat-label>
-                          <input matInput [formControl]="name" required>
+                          <mat-label>Nombre</mat-label>
+                          <input class="white-text" matInput [formControl]="name" required>
                           <mat-error *ngIf="name.invalid">Please enter your name</mat-error>
                         </mat-form-field>
                         <mat-form-field>
                           <mat-label>Email</mat-label>
-                          <input matInput [formControl]="email" placeholder="email@example.com" required>
+                          <input class="white-text" matInput [formControl]="email" placeholder="email@example.com" required>
                           <mat-error *ngIf="email.invalid">Please enter a valid email</mat-error>
                         </mat-form-field>
                         <mat-form-field>
-                          <mat-label>Message</mat-label>
-                          <textarea matInput [formControl]="message" maxlength="256" placeholder="I'm interested in..." required></textarea>
+                          <mat-label>Mensaje</mat-label>
+                          <textarea class="white-text" matInput [formControl]="message" maxlength="256" placeholder="I'm interested in..." required></textarea>
                           <mat-hint align="end"> {{message.value?.length || 0}}/256</mat-hint>
                           <mat-error *ngIf="message.invalid">Please enter a message</mat-error>
                         </mat-form-field>
-                        <button [disabled]="isLoading" class="submit" type="submit">Submit</button>
+                        <button [disabled]="isLoading" class="submit" type="submit">Enviar</button>
                         <input [formControl]="honeypot" class="hidden" type="text" />
                         <div [ngClass]="!submitted? 'hidden' : 'visible'" class="center-text">
-                          <span>{{responseMessage}}</span>
+                          <span class="white-text">{{responseMessage}}</span>
                         </div>
                       </form>
                 </div>
