vertical size responsive

--- a/src/app/contact-page/contact-page.component.css
+++ b/src/app/contact-page/contact-page.component.css
@@ -1,10 +1,9 @@
 body {
-    padding: 10%;
-    background: rgb(10,27,103);
-    background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
-    /*OLDBACKGROUND*/
-    /* background: linear-gradient(75deg, rgba(50,39,88,1) 0%, rgba(201,83,107,1) 39%, rgba(227,157,64,1) 100%) no-repeat center center fixed; */
+	padding-top: 150px;
+    background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%);
     background-size: cover;
+	/*OLDBACKGROUND*/
+    /* background: linear-gradient(75deg, rgba(50,39,88,1) 0%, rgba(201,83,107,1) 39%, rgba(227,157,64,1) 100%) no-repeat center center fixed; */
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
@@ -44,7 +43,7 @@ form.contact {
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 30px;
+	margin-top: 15px;
 	margin-bottom: 50px;
 }
 input,
@@ -69,4 +68,9 @@ button {
 button:hover:enabled{
 	color: white;
 	background-color: black;
+}
+
+textarea{
+	min-height: 60px;
+	max-height: 89px;
 }
