--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -11,7 +11,7 @@
 </header>
 
 <body>
-    <section id="contact" style="background-image:url('assets/img/index/map-image.png');">
+    <section id="contact">
        <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -47,9 +47,11 @@
                 </div>
             </div>
         </div>
+        
     </section>
-    
+
     <app-footer></app-footer>
+    
 </body>
 
 </html>
