--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -24,6 +24,27 @@
 <body>
   <!-- IEEENews -->
   <div *ngIf="true">
+    <div *ngIf="latestNews">
+      <owl-carousel-o [options]="customOptions">
+        <ng-container *ngFor="let noticia of latestNews">
+          <ng-template carouselSlide >
+            <a href="noticias/{{noticia.reference}}">
+              <mat-card class="news-card">
+                  <mat-card-header class="height500" fxLayoutAlign="center center">
+                      <mat-card-title>{{ noticia.title }}</mat-card-title>
+                      <mat-card-subtitle>{{ noticia.author }}</mat-card-subtitle>
+                  </mat-card-header>
+                  <img
+                    class="news-card-img" mat-card-image
+                    src="{{noticia.imageUrl}}" alt="Foto de Noticia"
+                  >
+              </mat-card>
+            </a>
+          </ng-template>
+        </ng-container>
+      </owl-carousel-o>
+    </div>
+
     <div class="bottomLine" fxLayoutAlign="center center" fxLayout="column">
       <div class="card-group maxwidth400">
 
