--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -24,52 +24,55 @@
 <body>
   <!-- IEEENews -->
   <div *ngIf="true">
-    <div *ngIf="latestNews">
-      <owl-carousel-o [options]="customOptions">
-        <ng-container *ngFor="let noticia of latestNews">
-          <ng-template carouselSlide >
-            <a href="noticias/{{noticia.reference}}">
-              <mat-card class="news-card">
-                  <mat-card-header class="height500" fxLayoutAlign="center center">
-                      <mat-card-title>{{ noticia.title }}</mat-card-title>
-                      <mat-card-subtitle>{{ noticia.author }}</mat-card-subtitle>
-                  </mat-card-header>
-                  <img
-                    class="news-card-img" mat-card-image
-                    src="{{noticia.imageUrl}}" alt="Foto de Noticia"
-                  >
-              </mat-card>
-            </a>
-          </ng-template>
-        </ng-container>
-      </owl-carousel-o>
-    </div>
-
-    <div class="bottomLine" fxLayoutAlign="center center" fxLayout="column">
-      <div class="card-group maxwidth400">
-
-        <mdb-card>
-          <mdb-card-img src="assets/image/IEEENews3.png">
-          </mdb-card-img>
-          <mdb-card-body>
-
-            <mdb-card-title>
-              <h4>{{ 'HOME.IEEENEWS.TITLE' | translate }}</h4>
-            </mdb-card-title>
-
-            <mdb-card-text>{{ 'HOME.IEEENEWS.CONTENT' | translate }}</mdb-card-text>
-
+    <mat-card class="news-container">
+      <mat-card-header>
+        <div class="row news-header">
+          <div class="col news-logo">
             <a class="link-text" [routerLink]="['/noticias']">
-              <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-                <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-              </h5>
+              <img src="assets/image/IEEENews3.png" class="news-logo">
+              <h3 class="news-container-title">{{ 'HOME.IEEENEWS.TITLE' | translate }}</h3>
             </a>
-          </mdb-card-body>
+          </div>
+          <div class="col">
+            <p class="news-content-flavor">
+              {{ 'HOME.IEEENEWS.CONTENT' | translate }}
+              <a class="link-text" [routerLink]="['/noticias']">
+                <h4 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+                  <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+                </h4>
+              </a>
+            </p>
 
-        </mdb-card>
+          </div>
+        </div>
+      </mat-card-header>
 
+      <div *ngIf="showLoadingSpinner">
+        <app-loading-spinner></app-loading-spinner>
       </div>
-    </div>
+      <div *ngIf="latestNews">
+        <owl-carousel-o [options]="customOptions">
+          <ng-container *ngFor="let noticia of latestNews">
+            <ng-template carouselSlide >
+              <a href="noticias/{{noticia.reference}}">
+                <mat-card class="news-card">
+                    <mat-card-header class="height500" fxLayoutAlign="center center">
+                        <mat-card-title>{{ noticia.title }}</mat-card-title>
+                        <mat-card-subtitle>{{ noticia.author }}</mat-card-subtitle>
+                    </mat-card-header>
+                    <img
+                      class="news-card-img" mat-card-image
+                      src="{{noticia.imageUrl}}" alt="Foto de Noticia"
+                    >
+                </mat-card>
+              </a>
+            </ng-template>
+          </ng-container>
+        </owl-carousel-o>
+      </div>
+
+    </mat-card>
+
   </div>
 
 
